<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:paddingBottom="40dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phrase_1"
        android:fontFamily="@font/museo_sans_500"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"/>


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:fontFamily="@font/museo_sans_500"
        android:textSize="25sp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_email_input"/>

    <EditText
        android:id="@+id/et_email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:ems="15"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/tv_email_error"/>

    <TextView
        android:id="@+id/tv_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_account_already_exists_with_this_email"
        android:drawablePadding="5dp"
        android:background="@drawable/error_border"
        android:textColor="@color/white"
        android:fontFamily="@font/museo_sans_500"
        android:visibility="gone"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/et_email_input"
        app:drawableLeftCompat="@drawable/cross" />


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:fontFamily="@font/museo_sans_500"
        android:textSize="25sp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email_error"
        app:layout_constraintStart_toStartOf="@id/tv_email_error"/>

    <EditText
        android:id="@+id/et_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:ems="15"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <TextView
        android:id="@+id/re_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_enter_password"
        android:textColor="@color/white"
        android:fontFamily="@font/museo_sans_500"
        android:textSize="25sp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_password_input"
        app:layout_constraintStart_toStartOf="@id/et_password_input"/>

    <EditText
        android:id="@+id/et_re_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="textPassword"
        android:ems="15"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/re_password"
        app:layout_constraintTop_toBottomOf="@id/re_password" />

    <TextView
        android:id="@+id/error_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_sans_500"
        android:background="@drawable/error_border"
        android:text="@string/password_error"
        android:textColor="@color/white"
        android:padding="5sp"
        android:drawablePadding="5dp"
        android:visibility="gone"
        app:drawableLeftCompat="@drawable/cross"
        app:layout_constraintTop_toBottomOf="@id/et_re_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_password_mismatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/password_mismatch"
        android:background="@drawable/error_border"
        android:padding="5sp"
        android:visibility="gone"
        app:drawableLeftCompat="@drawable/cross"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_re_password"
        app:layout_constraintBottom_toTopOf="@id/criteria"/>


    <TextView
        android:id="@+id/criteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/museo_sans_500"
        android:paddingBottom="10dp"
        android:text="@string/your_password_should_have_a_minimum_of_8_characters_and_contain_at_least_one_number_one_uppercase_and_one_lowercase_letter_you_can_use_special_characters"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_password_error" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_button_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/black"
        android:fontFamily="@font/museo_sans_300"
        android:translationZ="90dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/btn_next"
        app:layout_constraintBottom_toBottomOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>